--- a/src/components/hero-scene/hero-scene.component.html
+++ b/src/components/hero-scene/hero-scene.component.html
@@ -9,21 +9,21 @@
                 </div>
             </div>
         </div>
-        <img class="absolute top-8 sm:top-0 left-2 sm:left-12 max-w-2/5 md:h-2/4" src="assets/blackboard.png">
+        <img class="absolute top-8 sm:top-0 left-2 sm:left-12 max-w-2/5 md:h-2/4" src="assets/blackboard.png" alt="Blackboard">
         <div class="absolute bottom-0 left-0 h-2/5 sm:h-3/5">
-            <img class="h-full" src="assets/scientist.png">
+            <img class="h-full" src="assets/scientist.png" alt="Scientist">
             <div class="scientist-text absolute xl:whitespace-pre">
-                <img class="w-2 absolute bottom-12 xl:bottom-6" src="assets/pointing-arrow.png">
+                <img class="w-2 absolute bottom-12 xl:bottom-6" src="assets/pointing-arrow.png" alt="Arrow pointing to text">
                 <span class="cabin-sketch text-sm sm:text-base text-center">This is me, making sure you're able to do your best</span>
             </div>
         </div>
 
         <div class="h-3/5 w-2/4 absolute hero-background flex items-center justify-center">
             <img class="hero max-h-3/5 cursor-pointer" [ngClass]="{'animate-shrink': animating}" [src]="'assets/' + heroImg + '.png'"
-                (click)="toggleHero()">
+                (click)="toggleHero()" (keypress)="toggleHero()" tabindex="0" alt="Hero flying">
             <div class="hero-text absolute" #heroText>
                 @defer (on viewport(heroText)) {
-                    <img class="w-2 absolute hero-arrow" src="assets/pointing-arrow.png">
+                    <img class="w-2 absolute hero-arrow" src="assets/pointing-arrow.png" alt="Arrow pointing to text">
                     <div class="cabin-sketch typewriter text-sm xl:text-base text-center" [duration]="2000" [textContent]="'This is you, making the world a better place'"></div>
                 }
             </div>
@@ -38,20 +38,20 @@
             </div>
         </div>
 
-        <img class="absolute bug" src="assets/bug.png">
-        <img class="absolute bug bug-eye" src="assets/bug-eye.png">
+        <img class="absolute bug" src="assets/bug.png" alt="Bug">
+        <img class="absolute bug bug-eye" src="assets/bug-eye.png" alt="Bug's eye">
 
         <img class="hero absolute h-4/6 bottom-0 cursor-pointer" [ngClass]="{'animate-fly': animating}" [src]="'assets/' + heroImg + '-stand.png'"
-            (click)="toggleHero()">
+            (click)="toggleHero()" (keypress)="toggleHero()" alt="Standing hero" tabindex="0">
         <img class="hero hero-punch absolute h-5/6 bottom-0 cursor-pointer" [ngClass]="{'animate-fly': animating}" [src]="'assets/' + heroImg + '-punch.png'"
-            (click)="toggleHero()">
+            (click)="toggleHero()" (keypress)="toggleHero()" alt="Punching hero" tabindex="0">
     </div>
 
     <div *ngIf="heroScene === HeroScene.RESEARCH" class="w-full h-full relative" #researchScene>
         <canvas #wallOfFame class="absolute top-0 h-full frame-wall" [style]="{'width': wallOfFameWidth + 'rem', 'right': 'calc(-' + wallOfFameWidth + 'rem + 100%)'}"></canvas>
         <div class="research-text absolute w-1/2">
             @defer (on viewport(researchScene)) {
-                <img class="w-4 absolute bottom-4 sm:bottom-0 left-4 sm:left-0" src="assets/pointing-arrow.png">
+                <img class="w-4 absolute bottom-4 sm:bottom-0 left-4 sm:left-0" src="assets/pointing-arrow.png" alt="Arrow pointing to text">
                 <div class="cabin-sketch typewriter text-xl text-center" [textClass]="'opaque-bg sm:bg-transparent'" [duration]="2000" [delay]="10000" [textContent]="'The guy with the experience'"></div>
             }
         </div>
