--- a/src/components/navigation/nav-dropdown/nav-dropdown.component.html
+++ b/src/components/navigation/nav-dropdown/nav-dropdown.component.html
@@ -1,7 +1,8 @@
-<div class="menu-target h-full xl:text-lg" (mouseover)="expanded = true" (mouseout)="expanded = false" role="menu">
+<div class="menu-target h-full xl:text-lg" (mouseover)="expanded = true" (focus)="expanded = true"
+    (mouseout)="expanded = false" (blur)="expanded = false" role="menu">
     <div #ariaTarget class="menu-container h-full relative" tabindex="0" role="menuitem"
         [attr.aria-haspopup]="items.length > 0" [ariaExpanded]="expanded" [ariaLabel]="label">
-        <label class="max-md:hidden h-full flex items-center md:px-10"><span>{{label}}</span></label>
+        <span class="max-md:hidden h-full flex items-center md:px-10"><span>{{label}}</span></span>
         <ul class="overflow-hidden md:absolute md:z-10"
             [ngClass]="{ 'md:max-h-0': !expanded, 'md:max-h-40': expanded }">
             @for(navItem of items; track navItem) {
