--- a/src/components/no-phone/no-phone.component.html
+++ b/src/components/no-phone/no-phone.component.html
@@ -1,7 +1,7 @@
 <h1>Sorry!</h1>
 <p class="text-center">This page cannot function properly on a mobile phone or a tablet.</p>
 <div class="my-6 relative">
-    <img src="/assets/no-phone.png" />
+    <img src="/assets/no-phone.png" alt="Does not work on small screens" />
     <div class="absolute bottom-0 right-0 attribution opaque-bg">
         <a href="https://www.freepik.com/">Adapted from designs by Freepik</a>
     </div>
