Switch to signals where they make sense

--- a/src/components/carousel/carousel.component.html
+++ b/src/components/carousel/carousel.component.html
@@ -1,16 +1,16 @@
 <div #carousel class="carousel-slide-container flex w-full h-full relative"
-    [style.transform]="'translateX(-' + currSlide * 100 + '%)'">
+    [style.transform]="'translateX(-' + currSlide() * 100 + '%)'">
     <ng-content></ng-content>
 </div>
-<div *ngIf="pageSwitcher" class="absolute w-full h-full top-0 left-0 flex justify-between pointer-events-none">
+<div *ngIf="pageSwitcher()" class="absolute w-full h-full top-0 left-0 flex justify-between pointer-events-none">
     <div class="h-full flex justify-center items-center">
-        <fa-icon [icon]="angleLeft" size="2x" class="pl-5 pointer-events-auto"
-            [ngClass]="{'md:cursor-pointer': currSlide > 0, 'disabled': currSlide === 0}"
+        <fa-icon [icon]="angleLeft()" size="2x" class="pl-5 pointer-events-auto"
+            [ngClass]="{'md:cursor-pointer': currSlide() > 0, 'disabled': currSlide() === 0}"
             (click)="previousSlide()"></fa-icon>
     </div>
     <div class="h-full flex justify-center items-center">
-        <fa-icon [icon]="angleRight" size="2x" class="pr-5 pointer-events-auto"
-            [ngClass]="{'md:cursor-pointer': currSlide < numSlides - 1, 'disabled': currSlide === numSlides - 1}"
+        <fa-icon [icon]="angleRight()" size="2x" class="pr-5 pointer-events-auto"
+            [ngClass]="{'md:cursor-pointer': currSlide() < numSlides() - 1, 'disabled': currSlide() === numSlides() - 1}"
             (click)="nextSlide()"></fa-icon>
     </div>
 </div>
