--- a/src/components/no-phone/no-phone.component.html
+++ b/src/components/no-phone/no-phone.component.html
@@ -6,4 +6,4 @@
         <a href="https://www.freepik.com/">Adapted from designs by Freepik</a>
     </div>
 </div>
-<p class="text-center">Please come back on a device with a screen width of at least <b>{{minWidth}}</b> pixels.</p>
+<p class="text-center">Please come back on a device with a screen width of at least <b>{{minWidth()}}</b> pixels.</p>
