--- a/src/components/timeline/timeline-item/timeline-item.component.html
+++ b/src/components/timeline/timeline-item/timeline-item.component.html
@@ -1,23 +1,23 @@
-<div class="relative text-primary" [id]="id" [ariaLabel]="itemTitle">
+<div class="relative text-primary" [id]="id()" [ariaLabel]="itemTitle()">
     <div class="rounded-lg md:rounded-full relative item-bg">
         <div class="w-full flex items-center justify-between p-6 relative z-10">
-            @if(reverse) {
+            @if(reverse()) {
             <ng-container *ngTemplateOutlet="btn"></ng-container>
             }
             <div class="px-4">
-                <h1 class="uppercase text-base lg:text-lg">{{itemTitle}}</h1>
+                <h1 class="uppercase text-base lg:text-lg">{{itemTitle()}}</h1>
                 <ng-content select="[prompt]"></ng-content>
             </div>
-            @if(!reverse) {
+            @if(!reverse()) {
             <ng-container *ngTemplateOutlet="btn"></ng-container>
             }
         </div>
         <div class="opacity-delay absolute round-hack h-1/2 w-full item-bg top-0 z-0"
-            [ngClass]="{'opacity-0': !extended}"></div>
+            [ngClass]="{'opacity-0': !extended()}"></div>
     </div>
 
     <div class="timeline-item-text overflow-hidden w-full item-bg px-6"
-        [ngClass]="{'max-h-0': !extended, 'max-h-custom': extended}">
+        [ngClass]="{'max-h-0': !extended(), 'max-h-custom': extended()}">
         <ng-content select="[text]"></ng-content>
     </div>
 </div>
@@ -26,8 +26,8 @@
     <div class="bg-primary w-24 lg:w-36 h-24 lg:h-36 rounded-full flex items-center justify-center flex-shrink-0">
         <button
             class="timeline-btn text-primary-accent w-16 lg:w-24 h-16 lg:h-24 rounded-full flex items-center justify-center cursor-pointer"
-            (click)="toggle()" [ariaExpanded]="extended" [attr.aria-controls]="id" aria-label="Expand timeline section">
-            <fa-icon [icon]="icon" size="2xl" aria-hidden="true"></fa-icon>
+            (click)="toggle()" [ariaExpanded]="extended()" [attr.aria-controls]="id()" aria-label="Expand timeline section">
+            <fa-icon [icon]="icon()" size="2xl" aria-hidden="true"></fa-icon>
         </button>
     </div>
 </ng-template>
