--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-@if (!compact) {
+@if (!compact()) {
 <div class="flex">
     <div class="w-full w-4/5 sm:w-full lg:w-3/6 text-sm sm:text-lg flex justify-center text-primary">
         <div class="grid grid-rows-3 md:grid-cols-2 gap-2 sm:gap-5 pb-10 pt-14 items-center justify-items-center">
@@ -6,9 +6,9 @@
                 <use href="assets/icon-raw.svg#logo"></use>
             </svg>
             <span class="justify-self-start">Farkas Gábor e.v.</span>
-            <fa-icon [icon]="marker" size="lg"></fa-icon>
+            <fa-icon [icon]="marker()" size="lg"></fa-icon>
             <span class="justify-self-start">Pécs, Hungary</span>
-            <fa-icon [icon]="email" size="lg"></fa-icon>
+            <fa-icon [icon]="email()" size="lg"></fa-icon>
             <div class="relative justify-self-start cursor-pointer">
                 <span class="email" [ngClass]="{'copied': singleClick}"
                     title="Click to copy to clipboard, double click to write an email" (click)="copyToClipboard()"
@@ -30,10 +30,10 @@
     </div>
 </div>
 }
-<p class="text-primary text-sm py-2 text-center px-2" [ngClass]="{'hidden md:block ml-2': compact}">Copyright © 2024
+<p class="text-primary text-sm py-2 text-center px-2" [ngClass]="{'hidden md:block ml-2': compact()}">Copyright © 2024
     Gábor Farkas | Hosted by GitHub Pages</p>
 <div
-    [ngClass]="{'lg:absolute lg:w-full h-full top-0 left-0 flex items-center justify-center lg:pointer-events-none': compact, 'flex justify-center': !compact}">
+    [ngClass]="{'lg:absolute lg:w-full h-full top-0 left-0 flex items-center justify-center lg:pointer-events-none': compact(), 'flex justify-center': !compact()}">
     <a href="https://dashboard.simpleanalytics.com/farkasgaborev.eu?utm_source=farkasgaborev.eu&utm_content=badge"
         referrerpolicy="origin" target="_blank" class="flex justify-center items-center h-full pointer-events-auto">
         <picture>
@@ -44,9 +44,9 @@
         </picture>
     </a>
 </div>
-@if (compact) {
+@if (compact()) {
 <div class="hidden md:block text-primary mr-4">
-    <fa-icon [icon]="email" size="lg"></fa-icon>
+    <fa-icon [icon]="email()" size="lg"></fa-icon>
     <span class="email pl-2 cursor-pointer" [ngClass]="{'copied': singleClick}"
         title="Click to copy to clipboard, double click to write an email" (click)="copyToClipboard()"
         (dblclick)="openEmail()" (keypress)="copyToClipboard()" tabindex="0">
