--- a/src/components/hero-section/hero-section.component.html
+++ b/src/components/hero-section/hero-section.component.html
@@ -1,30 +1,30 @@
-<div class="relative w-full h-full flex flex-row pb-4 sm:pb-0 md:remove-bg overflow-hidden" [ngClass]="{flip}">
+<div class="relative w-full h-full flex flex-row pb-4 sm:pb-0 md:remove-bg overflow-hidden" [ngClass]="{'flip': flip()}">
     <div class="mobile-bg absolute w-full h-full top-0 left-0 md:hidden"
-        [style]="{'background-image': 'url(' + background + ')'}"></div>
+        [style]="{'background-image': 'url(' + background() + ')'}"></div>
     <div class="mobile-text-container absolute md:hidden opaque-bg"></div>
     <div class="w-full md:w-3/5 h-full p-5">
         <ng-content></ng-content>
     </div>
-    <div class="absolute top-0 h-full hidden md:block slant overflow-hidden" [ngClass]="{flip}">
-        <div class="w-full h-full relative bg" [style]="{'background-image': 'url(' + background + ')'}"></div>
+    <div class="absolute top-0 h-full hidden md:block slant overflow-hidden" [ngClass]="{'flip': flip()}">
+        <div class="w-full h-full relative bg" [style]="{'background-image': 'url(' + background() + ')'}"></div>
     </div>
-    <div class="absolute top-0 h-full hidden md:block slant" [ngClass]="{flip}">
+    <div class="absolute top-0 h-full hidden md:block slant" [ngClass]="{'flip': flip()}">
         <div class="absolute decoration w-fit h-fit flex select-none">
-            <p class="reference w-full h-full" [flyoutText]="references[flip ? 0 : 2]?.text" [url]="references[flip ? 0 : 2]?.url" [flyoutOrientation]="flip? Orientation.BOTTOMRIGHT : Orientation.BOTTOMLEFT" [flyoutFlip]="flip">
-                <fa-icon *ngIf="references[flip ? 0 : 2]?.icon" size="xl" class="text-primary" [icon]="references[flip ? 0 : 2]!.icon!"
+            <p class="reference w-full h-full" [flyoutText]="references()[flip() ? 0 : 2]?.text" [url]="references()[flip() ? 0 : 2]?.url" [flyoutOrientation]="flip()? Orientation().BOTTOMRIGHT : Orientation().BOTTOMLEFT" [flyoutFlip]="flip()">
+                <fa-icon *ngIf="references()[flip() ? 0 : 2]?.icon" size="xl" class="text-primary" [icon]="references()[flip() ? 0 : 2]!.icon!"
                     referenceIcon></fa-icon>
             </p>
-            <p class="reference w-full h-full" [flyoutText]="references[1]?.text" [url]="references[1]?.url" [flyoutOrientation]="flip? Orientation.BOTTOMRIGHT : Orientation.BOTTOMLEFT" [flyoutFlip]="flip">
-                <fa-icon *ngIf="references[1]?.icon" size="xl" class="text-primary" [icon]="references[1]!.icon!"
+            <p class="reference w-full h-full" [flyoutText]="references()[1]?.text" [url]="references()[1]?.url" [flyoutOrientation]="flip()? Orientation().BOTTOMRIGHT : Orientation().BOTTOMLEFT" [flyoutFlip]="flip()">
+                <fa-icon *ngIf="references()[1]?.icon" size="xl" class="text-primary" [icon]="references()[1]!.icon!"
                     referenceIcon></fa-icon>
             </p>
-            <p class="reference w-full h-full" [flyoutText]="references[flip ? 2 : 0]?.text" [url]="references[flip ? 2 : 0]?.url" [flyoutOrientation]="flip? Orientation.BOTTOMRIGHT : Orientation.BOTTOMLEFT" [flyoutFlip]="flip">
-                <fa-icon *ngIf="references[flip ? 2 : 0]?.icon" size="xl" class="text-primary" [icon]="references[flip ? 2 : 0]!.icon!"
+            <p class="reference w-full h-full" [flyoutText]="references()[flip() ? 2 : 0]?.text" [url]="references()[flip() ? 2 : 0]?.url" [flyoutOrientation]="flip()? Orientation().BOTTOMRIGHT : Orientation().BOTTOMLEFT" [flyoutFlip]="flip()">
+                <fa-icon *ngIf="references()[flip() ? 2 : 0]?.icon" size="xl" class="text-primary" [icon]="references()[flip() ? 2 : 0]!.icon!"
                     referenceIcon></fa-icon>
             </p>
         </div>
     </div>
-    <div class="absolute bottom-0 attribution opaque-bg" [ngClass]="{'left-0': flip, 'right-0': !flip}">
+    <div class="absolute bottom-0 attribution opaque-bg" [ngClass]="{'left-0': flip(), 'right-0': !flip()}">
         <ng-content select="[attribution]"></ng-content>
     </div>
 </div>
