--- a/src/components/modal/modal.component.html
+++ b/src/components/modal/modal.component.html
@@ -1,11 +1,11 @@
 <div class="flex flex-col w-full h-full">
     <div class="flex w-full justify-between items-center flex-grow-0 h-fit border-b py-1">
-        <h2 class="pl-2">{{windowTitle}}</h2>
+        <h2 class="pl-2">{{windowTitle()}}</h2>
         <div class="flex">
-            <a *ngIf="gitHubUrl" [href]="gitHubUrl" class="pr-2 cursor-pointer" target="_blank" title="Source code on GitHub">
-                <fa-icon [icon]="faGithub" size="xl" class="text-primary-accent hover:text-secondary-accent"></fa-icon>
+            <a *ngIf="gitHubUrl" [href]="gitHubUrl()" class="pr-2 cursor-pointer" target="_blank" title="Source code on GitHub">
+                <fa-icon [icon]="faGithub()" size="xl" class="text-primary-accent hover:text-secondary-accent"></fa-icon>
             </a>
-            <fa-icon [icon]="faXmark" size="xl" class="pr-2 cursor-pointer text-primary-accent hover:text-secondary-accent"
+            <fa-icon [icon]="faXmark()" size="xl" class="pr-2 cursor-pointer text-primary-accent hover:text-secondary-accent"
                 (click)="close()" title="Close"></fa-icon>
         </div>
     </div>
