--- a/src/layouts/story/story.layout.html
+++ b/src/layouts/story/story.layout.html
@@ -1,27 +1,27 @@
 <div class="max-w-8xl m-auto pt-6 md:px-6">
-    <div *ngIf="type !== StoryType.UNKNOWN">
+    <div *ngIf="type() !== StoryType().UNKNOWN">
         <ul class="breadcrumbs text-lg pb-6">
             <li>
                 <a href="/">Home</a>
             </li>
             <li>
-                <a [href]="'/' + baseUrl">{{categoryLabel}}</a>
+                <a [href]="'/' + baseUrl()">{{categoryLabel()}}</a>
             </li>
-            <li>{{story.title}}</li>
+            <li>{{story().title}}</li>
         </ul>
-        <h1 class="text-3xl pb-0">{{story.title}}</h1>
+        <h1 class="text-3xl pb-0">{{story().title}}</h1>
         <div class="pb-2 text-xl">
-            @switch(type) {
-            @case(StoryType.INSIGHT) {
+            @switch(type()) {
+            @case(StoryType().INSIGHT) {
             <i>An insight story</i>
             }
-            @case(StoryType.CASESTUDY) {
+            @case(StoryType().CASESTUDY) {
             <i>A case study</i>
             }
             }
         </div>
-        <p>Published at {{story.created.toLocaleString()}}</p>
-        <p class="pb-12">Last updated at {{story.lastModified.toLocaleString()}}</p>
+        <p>Published at {{story().created.toLocaleString()}}</p>
+        <p class="pb-12">Last updated at {{story().lastModified.toLocaleString()}}</p>
     </div>
     <div class="pb-12 lg:text-lg">
         <router-outlet />
