Fix typo in article

--- a/src/components/story/casestudy/linux-as-programming-language/linux-as-programming-language.component.html
+++ b/src/components/story/casestudy/linux-as-programming-language/linux-as-programming-language.component.html
@@ -23,7 +23,7 @@
     language? The operating system? We decided on Bash on Debian as the right tool to create a proof of concept. If
     everything works, we can port the code to a more sophisticated and performant environment. Until then, Bash was the
     language everybody understood in the team. In retrospect, this decision was ridiculous in many ways. These kinds of
-    projects usually do Bash get rewritten, refactored, or ported in any way. They outlive their use in their initial
+    projects usually do not get rewritten, refactored, or ported in any way. They outlive their use in their initial
     form. Not to mention Bash's shortcomings or that I wrote ~90% of the code. It was quite a fun struggle, though.
 </p>
 
