--- a/src/layouts/story/story.layout.html
+++ b/src/layouts/story/story.layout.html
@@ -1,4 +1,4 @@
-<div class="max-w-8xl m-auto pt-6 md:px-6">
+<div class="max-w-8xl m-auto pt-6 px-4 md:px-6">
     <div *ngIf="type() !== StoryType().UNKNOWN">
         <ul class="breadcrumbs text-lg pb-6">
             <li>
