Improve wording in GDPR article

--- a/src/components/story/insight/how-to-gdpr/how-to-gdpr.component.html
+++ b/src/components/story/insight/how-to-gdpr/how-to-gdpr.component.html
@@ -129,12 +129,12 @@
     complexity. There are signs that regulations scale up with size, and one of them is the newfound need for a Data
     Protection Impact Assessment (DPIA).</p>
 
-<p class="pb-4">DPIA is not only a GDPR requirement, but also a great method to ensure a large application is complying
-    completely and correctly. Large applications are built differently, often using microservice architecture, databases
-    residing in multiple geographic locations, and CDNs for streamlining file storage. On that scale, GDPR is much
-    harder to comply with; therefore, it focuses on questions like where and how, as in where the application stores
-    personal data and how it uses collected personal data. To make compliance manageable, companies execute DPIAs
-    periodically.</p>
+<p class="pb-4">DPIA is not only a GDPR requirement for large organizations, but also a great method to ensure a large
+    application is complying completely and correctly. Large applications are built differently, often using
+    microservice architecture, databases residing in multiple geographic locations, and CDNs for streamlining file
+    storage. On that scale, GDPR is much harder to comply with; therefore, it focuses on questions like where and how,
+    as in where the application stores personal data and how it uses collected personal data. To make compliance
+    manageable, companies execute DPIAs periodically.</p>
 
 <p class="pb-4">When a DPIA is needed, good chance you are working with a large enterprise maintaining a large system
     with a large user base. In that case, you just have to follow the company's internal policies. They already figured
@@ -151,10 +151,10 @@
         href="https://gdpr.eu/data-protection-impact-assessment-template/" target="_blank">official one</a>. Make a list
     of all the personal data collected by the application, their possible storage locations (focusing on third-party
     services with servers outside of the EU), and legitimate reasons for withholding some of the collected data, where
-    necessary. For example, if you are operating a service invoicing based on users of your partners (like GitHub), you
-    cannot remove or modify invoices when a user gets deleted. That is a conflict of interest, a legitimate reason to
-    keep part of the collected personal data for an extended period. If you clearly outline every case like that in the
-    first DPIA, it will be easier to maintain compliance with time.</p>
+    necessary. For example, if you are operating a service and invoicing based on users of your partners (like GitHub),
+    you cannot remove or modify invoices when a user gets deleted. That is a conflict of interest, a legitimate reason
+    to keep part of the collected personal data for an extended period. If you clearly outline every case like that in
+    the first DPIA, it will be easier to maintain compliance with time.</p>
 
 <p class="pb-4">A better practice is planning the application in a DPIA-friendly way from the start if it will need to
     be scaled. It's more about documentation than architecture. When you need to conduct the first DPIA, having proper
